{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 88,
  "lineage": "c1145a62-8eb5-bf30-47ef-4206d7187c2d",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:security-group/sg-0b250974e66fbd100",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b250974e66fbd100",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5e80243c1384933"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sso-okta-cluster-20240626223004613800000003",
            "name_prefix": "sso-okta-cluster-",
            "owner_id": "133776528597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-cluster"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:security-group/sg-0b5e80243c1384933",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5e80243c1384933",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b250974e66fbd100"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b250974e66fbd100"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b250974e66fbd100"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b250974e66fbd100"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b250974e66fbd100"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b250974e66fbd100"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "sso-okta-node-20240626223004613600000001",
            "name_prefix": "sso-okta-node-",
            "owner_id": "133776528597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-node",
              "kubernetes.io/cluster/sso-okta": "owned"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-node",
              "kubernetes.io/cluster/sso-okta": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1987780894",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b250974e66fbd100",
            "security_group_rule_id": "sgr-0746ea8a0b7575fab",
            "self": false,
            "source_security_group_id": "sg-0b5e80243c1384933",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-724937028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b5e80243c1384933",
            "security_group_rule_id": "sgr-0969236677f89c247",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2810019451",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5e80243c1384933",
            "security_group_rule_id": "sgr-0519d04e7884dff7d",
            "self": false,
            "source_security_group_id": "sg-0b250974e66fbd100",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1198407800",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5e80243c1384933",
            "security_group_rule_id": "sgr-019e5c0eaefc69cc7",
            "self": false,
            "source_security_group_id": "sg-0b250974e66fbd100",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2385258478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5e80243c1384933",
            "security_group_rule_id": "sgr-054fb0639b8dcbe39",
            "self": false,
            "source_security_group_id": "sg-0b250974e66fbd100",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2641370063",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5e80243c1384933",
            "security_group_rule_id": "sgr-0b1e823c2a102e796",
            "self": false,
            "source_security_group_id": "sg-0b250974e66fbd100",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4191234052",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5e80243c1384933",
            "security_group_rule_id": "sgr-050cb8a2ce78733c0",
            "self": false,
            "source_security_group_id": "sg-0b250974e66fbd100",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-373569933",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5e80243c1384933",
            "security_group_rule_id": "sgr-032a65124f42432fb",
            "self": false,
            "source_security_group_id": "sg-0b250974e66fbd100",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4101158563",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5e80243c1384933",
            "security_group_rule_id": "sgr-01187779ed49b1334",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1826898441",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5e80243c1384933",
            "security_group_rule_id": "sgr-0716cb0959ceaba01",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3367756262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b5e80243c1384933",
            "security_group_rule_id": "sgr-065acd11fbf017385",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:network-acl/acl-084dd3546e85f32ef",
            "default_network_acl_id": "acl-084dd3546e85f32ef",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-084dd3546e85f32ef",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "133776528597",
            "subnet_ids": [
              "subnet-00190ed11d376e65b",
              "subnet-010e62c4658bbd450",
              "subnet-011ffbfe805cdd4bb",
              "subnet-0b4b58464baddc719"
            ],
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-default"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-default"
            },
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:route-table/rtb-0b601291199361a6c",
            "default_route_table_id": "rtb-0b601291199361a6c",
            "id": "rtb-0b601291199361a6c",
            "owner_id": "133776528597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-default"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:security-group/sg-0c863d3bd51db3ab5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c863d3bd51db3ab5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "133776528597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-default"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-default"
            },
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:vpc/vpc-07f2aa771b817a7d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-09c3611f98bafad7d",
            "default_route_table_id": "rtb-018326cdaed4b7907",
            "default_security_group_id": "sg-086a1b194bfdb1b79",
            "dhcp_options_id": "dopt-0d7b09980f04d4ddc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-07f2aa771b817a7d9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018326cdaed4b7907",
            "owner_id": "133776528597",
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "default"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1919a763fad87d8",
            "arn": "arn:aws:ec2:us-west-1:133776528597:elastic-ip/eipalloc-0f1919a763fad87d8",
            "association_id": "eipassoc-01d6d81299012fc32",
            "domain": "vpc",
            "id": "eipalloc-0f1919a763fad87d8",
            "network_border_group": "us-west-1",
            "network_interface": "eni-053b8d5d6fc632cd2",
            "private_dns": "ip-10-0-48-89.us-west-1.compute.internal",
            "private_ip": "10.0.48.89",
            "public_dns": "ec2-13-56-143-2.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.143.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-us-west-1a"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-us-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:internet-gateway/igw-0846a0472fb0c2ba7",
            "id": "igw-0846a0472fb0c2ba7",
            "owner_id": "133776528597",
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta"
            },
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1919a763fad87d8",
            "association_id": "eipassoc-01d6d81299012fc32",
            "connectivity_type": "public",
            "id": "nat-097e1c9b2bb3d0fe3",
            "network_interface_id": "eni-053b8d5d6fc632cd2",
            "private_ip": "10.0.48.89",
            "public_ip": "13.56.143.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b4b58464baddc719",
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-us-west-1a"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-us-west-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05a4aabdee2c750561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-097e1c9b2bb3d0fe3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a4aabdee2c75056",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0846a0472fb0c2ba7",
            "id": "r-rtb-008eedb111523361b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008eedb111523361b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:route-table/rtb-05a4aabdee2c75056",
            "id": "rtb-05a4aabdee2c75056",
            "owner_id": "133776528597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-097e1c9b2bb3d0fe3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-private"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:route-table/rtb-008eedb111523361b",
            "id": "rtb-008eedb111523361b",
            "owner_id": "133776528597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0846a0472fb0c2ba7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-public"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089103a48b2596151",
            "route_table_id": "rtb-05a4aabdee2c75056",
            "subnet_id": "subnet-00190ed11d376e65b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072e4a9eabcdcee3e",
            "route_table_id": "rtb-05a4aabdee2c75056",
            "subnet_id": "subnet-011ffbfe805cdd4bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c146c98a47e66903",
            "route_table_id": "rtb-008eedb111523361b",
            "subnet_id": "subnet-0b4b58464baddc719"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a67a56e17490c31",
            "route_table_id": "rtb-008eedb111523361b",
            "subnet_id": "subnet-010e62c4658bbd450"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:subnet/subnet-00190ed11d376e65b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00190ed11d376e65b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133776528597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-private-us-west-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-private-us-west-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:subnet/subnet-011ffbfe805cdd4bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011ffbfe805cdd4bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133776528597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-private-us-west-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-private-us-west-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:subnet/subnet-0b4b58464baddc719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4b58464baddc719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133776528597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-public-us-west-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-public-us-west-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:subnet/subnet-010e62c4658bbd450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010e62c4658bbd450",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133776528597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-public-us-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta-public-us-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c5700e27a4ddf26f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:133776528597:vpc/vpc-0c5700e27a4ddf26f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084dd3546e85f32ef",
            "default_route_table_id": "rtb-0b601291199361a6c",
            "default_security_group_id": "sg-0c863d3bd51db3ab5",
            "dhcp_options_id": "dopt-0d7b09980f04d4ddc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5700e27a4ddf26f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b601291199361a6c",
            "owner_id": "133776528597",
            "tags": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta"
            },
            "tags_all": {
              "Blueprint": "sso-okta",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sso-okta"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}